preference config works

--- a/quizdroid/app/src/main/AndroidManifest.xml
+++ b/quizdroid/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Quizdroid">
         <activity
+            android:name=".Preferences"
+            android:exported="false" />
+        <activity
             android:name=".Answer"
             android:exported="false" />
         <activity
